Corrected col spacing.

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,7 @@
+#topNav {
+  height: 45px;
+}
+
 nav {
   background-color: rgb(255, 255, 255);
 }
@@ -5,31 +9,33 @@ nav {
 #homeAnchor,
 #momentsAnchor {
   color: rgb(108, 117, 125);
-  font-size: .95rem;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 45px;
 }
 
 #homeAnchor:hover,
 #momentsAnchor:hover {
-  color: rgb(5, 159, 245);
-  text-decoration-line: none;
-  text-decoration-color: rgb(5, 159, 245);
   text-decoration-style: none;
+  text-decoration-line: none;
+  /* color: rgb(5, 159, 245);
+  text-decoration-color: rgb(5, 159, 245); */
 }
 
 #homeDiv {
-  height: 35px;
+  height: 45px;
 }
 
 #momentsDiv {
-  height: 32px;
+  height: 45px;
 }
 
-#homeDiv:hover,
+/* #homeDiv:hover,
 #momentsDiv:hover {
   border-bottom-color: rgb(5, 159, 245);
   border-bottom-style: solid;
   border-bottom-width: 2px;
-}
+} */
 
 #homeSVG {
   fill: rgb(29, 161, 242);
@@ -44,21 +50,21 @@ nav {
   height: 20px;
 }
 
-#homeSVG:hover,
+/* #homeSVG:hover,
 #momentsSVG:hover {
   fill: rgb(5, 159, 245);
-}
+} */
 
-/* 
-#searchDiv {
+/* #searchDiv {
   background-color: rgb(245, 248, 250);
   border-color: rgb(108, 117, 125);
   border-style: solid;
   border-width: 1px;
   border-radius: 20px;
-}
+  vertical-align: middle;
+} */
 
-#searchDiv:active,
+/* #searchDiv:active,
 #searchDiv:focus {
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 0px 0px 0px transparent;
@@ -70,34 +76,35 @@ nav {
   border-style: solid;
   border-width: 2px;
   border-radius: 20px;
-} 
-*/
+}  */
  
 #searchInput {
-  border-top-color: rgb(108, 117, 125);
-  border-bottom-color: rgb(108, 117, 125);
-  border-left-color: rgb(108, 117, 125);
+  border-top-color: #e6ecf0;
+  border-right-color: transparent;
+  border-bottom-color: #e6ecf0;
+  border-left-color: #e6ecf0;
   border-top-width: 1px;
+  border-right-width: 0px;
   border-bottom-width: 1px;
   border-left-width: 1px;
-}
-
-#searchInput,
-#searchInput:active,
-#searchInput:focus {
-  border-right-color: transparent;
   border-top-style: solid;
   border-right-style: none;
   border-bottom-style: solid;
   border-left-style: solid;
-  border-right-width: 0px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 20px;
   border-top-left-radius: 20px;
+  /* vertical-align: middle; 
+  border-top-color: rgb(108, 117, 125);
+  border-bottom-color: rgb(108, 117, 125);
+  border-left-color: rgb(108, 117, 125); */
 }
 
-#searchDiv:active,
+/* #searchInput:active
+#searchInput:focus */
+
+/* #searchDiv:active,
 #searchDiv:focus
 #searchInput:active,
 #searchInput:focus,
@@ -109,9 +116,9 @@ nav {
   outline-offset: 0px;
   outline-style: none;
   outline-color: transparent;
-}
+} */
 
-#searchInput:active,
+/* #searchInput:active,
 #searchInput:focus {
   border-top-color: rgb(62, 150, 223);
   border-bottom-color: rgb(62, 150, 223);
@@ -119,9 +126,9 @@ nav {
   border-top-width: 2px;
   border-bottom-width: 2px;
   border-left-width: 2px;
-}
+} */
 
-#searchBtn:active,
+/* #searchBtn:active,
 #searchBtn:focus {
   border-top-color: rgb(62, 150, 223);
   border-right-color: rgb(62, 150, 223);
@@ -132,16 +139,17 @@ nav {
   border-top-width: 2px;
   border-right-width: 2px;
   border-bottom-width: 2px;
-}
+} */
 
 #searchInput,
 #searchBtn {
   background-color: rgb(245, 248, 250);
 }
 
-#searchBtn,
-#searchBtn:active,
-#searchBtn:focus {
+/* #searchBtn:active
+#searchBtn:focus */
+
+#searchBtn {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 0px;
@@ -152,17 +160,20 @@ nav {
 } 
 
 #searchBtn {
-  border-top-color: rgb(108, 117, 125);
-  border-right-color: rgb(108, 117, 125);
-  border-bottom-color: rgb(108, 117, 125);
+  border-top-color: #e6ecf0;
+  border-right-color: #e6ecf0;
+  border-bottom-color: #e6ecf0;
   border-top-width: 1px;
   border-right-width: 1px;
   border-bottom-width: 1px;
+  /* border-top-color: rgb(108, 117, 125);
+  border-right-color: rgb(108, 117, 125);
+  border-bottom-color: rgb(108, 117, 125); */
 } 
 
-#searchBtn:hover {
+/* #searchBtn:hover {
   cursor: pointer;
-}
+} */
 
 #searchSVG {
   fill: rgb(108, 117, 125);
